--- a/docs/_posts/2022-12-19-ane-test.md
+++ b/docs/_posts/2022-12-19-ane-test.md
@@ -27,7 +27,7 @@ As an iOS developer and being the tech nerd I am, I was shocked when I saw that 
 |  ANE   |  ANE  | RTX2080 |
 |  ----  | ----  | ------- |
 | FP16   | 15.8TFLOPS | 20.14 TFLOPS |
-| %  | 100% | 127.5% 
+| FP32  | - | 10.07 TFLOPS |
 
 
 ### How?
@@ -60,7 +60,7 @@ So how do the A15 chips go in real world performance?
 This article is strictly focused on performance. For design, inputs, outputs, battery life, there’s plenty of other resources out there.
 
 ## 2.Start Testing
-#### RTX2080 BatchSize 1
+#### RTX2080 BatchSize 1 FP32
 Test code:   
 
 ```
@@ -78,7 +78,7 @@ avg = (end-start)/100
 ```
 Here we get 53.11s calculation time for 100 cycles, and the average value is **531ms**
 
-#### RTX2080 BatchSize 6
+#### RTX2080 BatchSize 6 FP32
 Test code:   
 
 ```
@@ -97,6 +97,12 @@ avg = (end-start)/150
 
 
 Here we get 75.54s calculation time for 150 cycles, and the average value is **504ms**
+
+#### RTX2080 BatchSize 6 FP16
+test code is same as above 
+
+
+Here we get 33.2s calculation time for 150 cycles, and the average value is **221ms**
 
 #### MacBook Pro 2018
 I use Xcode's built-in CoreML performance testing tools
@@ -128,16 +134,17 @@ The test method here is the same as above, except that the compute unit is limit
 ![macbook](/assets/anetest/a15ane.png)  
 
 As can be seen from the figure, the model runs entirely on the Neural Engine of the A15 chip.   
-In the end the Apple Neural Engine doesn't let us down and is even a bit faster than the RTX2080.   
-Here we get the median value is **495ms**, which is **36ms** faster than RTX2080!   
+In the end the Apple Neural Engine doesn't let us down and is even a bit faster than the RTX2080 10.07 TFLOPS FP32.   
+Here we get the median value is **495ms**, which is **36ms** faster than RTX2080 FP32!   
 
 ## 3.Conclusion
-The performance of Apple Neural Engine did not disappoint us, it is even faster than the RTX2080 which is 4.43TFLOPS faster in FP16 according to tech spec.
+The performance of Apple Neural Engine did not disappoint us, it is even faster than the RTX2080 at 220W FP32. Although ANE's FP16 did not meet the performance expectations, considering the power consumption, ANE can have such a performance is very impressive.
 
 |  Device  |  Inference Time  | Adv Percentage |
 |  ----  | ----  | ------- |
-| RTX2080 BS=1 | 531 ms | 0% |
-| RTX2080 BS=6 | 504 ms | 5.1% |
+| RTX2080 BS=1 FP32| 531 ms | 0% |
+| RTX2080 BS=6 FP32| 504 ms | 5.1% |
+| RTX2080 BS=6 FP16| 221 ms | 58.3% |
 | Intel Iris Plus 655| 3238 ms | -510% |
 | A15 GPU | 2618 ms | -393% |
 | A15 ANE | 495 ms | +6.7% |
